# sconsx

./: .gitignore  .readthedocs.yaml  README.md  README.rst  appveyor.yml  metainfo.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: conda-package-build.yml
conda/: meta.yaml
debian/: changelog
doc/: api.rst  autosum.rst  conf.py  contents.rst  description.rst  environment.yml  index.rst
doc/other/: authors.rst  changelog.rst  index.rst  license.rst
doc/user_guide/: index.rst  install.rst
src/openalea/sconsx/: __init__.py  config.py  environ.py  errormsg.py  f2py.py  qt4.py  qt5.py  version.py
src/openalea/sconsx/tools/: README  boost_math_c99.py  cgal.py  compiler.py  flex.py  glut.py  gnuplot.py  install.py  mingw.py  msvc.py  multicpu.py  pthread.py  qhull.py  qt.py  qt5.py  termcap.py
src/openalea/sconsx/util/: buildprefix.py  env_check.py  qt_check.py
src/sconsx/: config.py  cython.py  environ.py  errormsg.py  qt4.py  qt5.py
src/sconsx/tools/: alea.py  ann.py  bison.py  boost.py  boost_base.py  boost_math_c99.py  boost_python.py  boost_thread.py  builddir.py  cgal.py  compiler.py  egglib.py  eigen.py  f2py.py  flex.py  glut.py  gmp.py  gnuplot.py  install.py  lapack.py  mpfr.py  msvc.py  opengl.py  pthread.py  python.py  qhull.py  qt.py  qt4.py  qt5.py  readline.py  termcap.py
src/sconsx/util/: buildprefix.py  config_deploy.py  configdeploy.py  env_check.py  hexversion.py  lib_check.py  qt_check.py  versionreader.py
